--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,13 @@ dependencies:
   hive: ^2.2.3
   path_provider: ^2.0.13
   hive_flutter: ^1.1.0
-
+  intl: ^0.18.0
+  validatorless: ^1.2.3
+  syncfusion_flutter_gauges: ^20.4.52
+  currency_text_input_formatter: ^2.1.9
+  flutter_overlay_loader: ^2.0.0
+  google_fonts: ^4.0.3
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
